# drone_dectector

./: .drone_dectector  .gitignore  AUTHORS.rst  CHANGELOG  CONTRIBUTING.rst  Makefile  README.rst  pyproject.toml  requirements.txt  setup.py  tox.ini
docs/source/: conf.py  index.rst  introduction.rst  reference_manual.rst
drone_dectector/: __init__.py  __main__.py  _version.py  custom_logging.py  drone_dectector.py  logging.conf  monitoring.py
scripts/: init_remote_repo.bash
tests/: drone_dectector_test.py
