[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = 'setuptools.build_meta'

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flit.metadata]
module = "drone_dectector"
author = "Jean-Christophe Malapert"
author-email = "jcmalapert@gmail.com"
home-page = "https://github.com/malapert/drone_dectector"
classifiers = [ "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",]
description-file = "README.rst"